--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
-    "hbs": "~2.7.0"
+    "hbs": "~2.7.0",
+    "winston":""
   }
 }
