--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "hbs": "~2.7.0",
-    "winston":""
+    "winston":"",
+    "redis":""
   }
 }
